Update Team members, news, and pics

--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -2,7 +2,7 @@
   photo: chi.jpg
   duration: 2017-2019 (Now at Google, SD)
   info: Chi was a postdoc whose research interests include energy-efficient wireless networking, precision & robust localization, wireless power delivery, as well as mobile & ubiquitous sensing.
-  email: c4zhang@eng.ucsd.edu
+  email: c4zhang [at] eng.ucsd.edu
   number_educ: 2
   education1: Ph.D. at University of Wisconsin, Madison
   education2: "Highlights: Mobisys'19, Mobicom'20, ISSCC'20"
