--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,8 @@
 
+
+- date: Sep 2022
+  headline: Ish Jain and Raghav Subbaraman won <a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2022-north-america">Qualcomm Innovation Fellowship 2022</a>.
+
 - date: June 2022
   headline: 1st International Workshop on AI Perception at CVPR 2022 is live. See more details <a href="https://wcsng.ucsd.edu/waip">here</a>.
 
