--- a/_data/pictures.yml
+++ b/_data/pictures.yml
@@ -1,4 +1,17 @@
 
+
+
+- title: dinner_2022
+  image: dinner_2022.jpg
+- title: memorial_2022
+  image: memorial_2022.jpg
+
+- title: birch_2022
+  image: birch_2022.jpg
+- title: graduation_2022
+  image: graduation_2022.jpg
+- title: mobicom_2021
+  image: mobicom_2021.jpg
 - title: frisbee
   image: frisbee.jpg
 - title: group_christmas21
