--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -2,7 +2,7 @@
 #- name: <a href='https://web.eng.ucsd.edu/~dineshb/'>Dinesh Bharadia</a>
 #  photo: dinesh.jpg
 #  info: Assistant Professor
-#  email: dineshb@ucsd.edu
+#  email: dineshb [at] ucsd.edu
 #  number_educ: 3
 #  education1: PostDoc at MIT
 #  education2: Ph.D. at Stanford University
@@ -13,43 +13,43 @@
 - name: <a href='http://acsweb.ucsd.edu/~sayyalas/'>Roshan Ayyalasomayajula</a>
   photo: roshan.jpg
   info: PhD Student, started 2017
-  email: roshana@eng.ucsd.edu
+  email: roshana [at] eng.ucsd.edu
   number_educ: 2
   education1: Roshan’s current research interests are in using wireless and computer vision techniques bolstered with machine learning algorithms. He focuses on applications such as detection, localization, and tracking of objects with a vision of autonomous vehicles.
-  education2: "Highlights: Conext'19, Mobicom'20, NSDI'20, ICASSP'21, IMWUT '21"
+  education2: "Highlights: Conext'19, Mobicom'20, NSDI'20, ICASSP'21, IMWUT '21, IEEE RAL'22"
   education3: 
   education4: 
 
 # - name: Yeswanth Reddy G.
 #   photo: yeswanth.jpeg
 #   info: PhD student, started 2017
-#   email: yguddeti@eng.ucsd.edu
+#   email: yguddeti [at] eng.ucsd.edu
 #   number_educ: 2
 #   education1: Yeswanth is developing systems which explore new paradigms to interact with the RF spectrum for applications such as spectrum sensing and RF fingerprinting. Future projects include indoor AP synchronization for localization and distributed MIMO.
 #   education2: "Highlights: NSDI'19, Mobisys'19, Sensys'20"
 
-- name: Manideep Dunna
+- name: <a href='https://www.linkedin.com/in/manideep-dunna/'>Manideep Dunna</a>
   photo: manideep.jpg
   info: PhD Student, started 2018
-  email: mdunna@eng.ucsd.edu
+  email: mdunna [at] eng.ucsd.edu
   number_educ: 2
   education1: Manideep's research focuses on using backscatter techniques for low power wireless relays and in-body communications. 
-  education2: "Highlights: Mobicom'20, JSSC'20, ISSCC'21, NSDI'21, NSDI'21"
+  education2: "Highlights: Mobicom'20, JSSC'20, ISSCC'21, NSDI'21, NSDI'21, ISSCC'22"
 
 - name: <a href='https://ishjain.github.io/'>Ish Kumar Jain</a>
   photo: ish.jpg
   info: PhD Student, started 2018
-  email: ikjain@eng.ucsd.edu
+  email: ikjain [at] eng.ucsd.edu
   number_educ: 2
   education1: Ish is working on millimeter wave communications to provide high reliability and low latency for applications such as virtual reality and vehicular communications.
-  education2: "Highlights: NSDI'20, mmNets'20, Sigcomm'21"
+  education2: "Highlights: NSDI'20, mmNets'20, Sigcomm'21, Hotcarbon'22, IEEE WPMC'22"
   education3:
   education4:
 
-- name: Kshitiz Bansal
+- name: <a href='https://www.linkedin.com/in/kshitiz-bansal-789869111/'>Kshitiz Bansal</a>
   photo: kshitiz.jpg
   info: PhD Student, started 2018
-  email: ksbansal@eng.ucsd.edu
+  email: ksbansal [at] eng.ucsd.edu
   number_educ: 2
   education1:  Kshitiz's research interests include ML algorithms and their applications in communication networks, wireless systems and sensors. His current work involves the fusion of radar sensing and computer vision with primary focus on autonomous driving systems.
   education2: "Highlights: Sensys'20"
@@ -59,40 +59,40 @@
 - name: Hadi Givehchian
   photo: hadi.jpg
   info: PhD Student, started 2018
-  email: hgivehch@eng.ucsd.edu 
-  number_educ: 2
+  email: hgivehch [at] eng.ucsd.edu 
+  number_educ: 3
   education1:  Hadi’s research interests include developing machine learning and data-driven algorithms to enhance networked systems (e.g. wireless communication and sensing, resource sharing and scheduling)
   education2: Primary advisor - Prof. Aaron Schulman
-  education3:
+  education3: "Highlights: IEEE SP'21"
   education4:
 
 - name: <a href="/aarun"> Aditya Arun </a>
   photo: aditya.jpeg
   info: PhD Student, started 2019
-  email: aarun@eng.ucsd.edu
+  email: aarun [at] eng.ucsd.edu
   number_educ: 2
   education1:  Aditya's research currently focuses on realizing accurate indoor localization by introducing a new WiFi-based sensor modality using graph-based optimization techniques.
-  education2: "Highlights: NSDI'20, Mobicom'20, Sensys'20 workshop, IMWUT '21, ICRA '22"
+  education2: "Highlights: NSDI'20, Mobicom'20, Sensys'20 workshop, IMWUT '21, IEEE RAL'22, ICRA '22"
   education3:
   education4:
 
-- name: Raghav Subbaraman
+- name: <a href='https://www.linkedin.com/in/rsubbaraman/'>Raghav Subbaraman</a>
   photo: raghav.png
   info: PhD Student, started 2019
-  email: rsubbaraman@eng.ucsd.edu
+  email: rsubbaraman [at] eng.ucsd.edu
   number_educ: 2
   education1:  Raghav's research areas span spectrum sensing and development of robust wireless testbed platforms. He is particularly interested in understanding how sensing can influence control and orchestration of communication systems.
-  education2: "Highlights: NSDI'19, Getmobile'20, mmNets'20, NSDI'21, Sigcomm'21"
+  education2: "Highlights: NSDI'19, Getmobile'20, mmNets'20, NSDI'21, Sigcomm'21, JSSC'22, Mobicom'22"
   education3:
   education4:
 
 - name: <a href='https://agrim9.github.io/'>Agrim Gupta</a>
   photo: agrim.png
   info: PhD Student, started 2019
-  email: agg003@eng.ucsd.edu
+  email: agg003 [at] eng.ucsd.edu
   number_educ: 2
   education1:  Agrim's research interest is solving analysis-intensive problems stemming in Wireless Communications, involving topics like MIMO, ML techniques in Wireless Communications, Indoor Positioning,  and Backscatter Communications.
-  education2: Sensys'20 Workshop, NSDI'21, IEEE Journal'21
+  education2: "Highlights: Sensys'20 Workshop, NSDI'21, IEEE Journal'21, Hotcarbon'22"
   education3:
   education4:
 
@@ -102,7 +102,7 @@
 #- name: Nikhil Shinde
 #  photo: yeswanth.jpg
 #  info: PhD Student, started 2019
-#  email: nshinde@eng.ucsd.edu
+#  email: nshinde [at] eng.ucsd.edu
 #  number_educ: 0
 #  education1:  
 #  education2:
@@ -112,7 +112,7 @@
 - name: Byungjun Kim
   photo: byungjun.jpeg
   info: PhD Student, started 2019
-  email: byk004@eng.ucsd.edu
+  email: byk004 [at] eng.ucsd.edu
   number_educ: 2
   education1: Byungjun's research interests include communication networks and wireless systems, involving spectrum sensing, machine learning and vehicular communications.
   education2: Primary advisor- Prof. Peter Gerstoft 
@@ -122,7 +122,7 @@
 - name: Richard Bell
   photo: richard.png
   info: PhD Student, started 2019
-  email: rcbell@eng.ucsd.edu
+  email: rcbell [at] eng.ucsd.edu
   number_educ: 1
   education1:  Richard's research interests are in localization of RF emitters and applications of machine learning in wireless communications. Richard would like to achieve the true vision of a cognitive radio.
   education2:
@@ -133,19 +133,61 @@
 - name: <a href='https://www.linkedin.com/in/tian-qiu-b68a1b122/'>Tian Qiu</a>
   photo: tian.jpeg
   info: PhD Student, started 2021 (MS, since 2019)
-  email: tiq014@eng.ucsd.edu
-  number_educ: 2
+  email: tiq014 [at] eng.ucsd.edu
+  number_educ: 3
   education1:  Tian's research interest is in wireless VR and video compression.
   education2: "Primary advisor: Prof. Pamela Cosman"
-  education3:
+  education3: "Highlights: WPMC'22"
   education4:
 
 - name: <a href='https://sites.google.com/view/rohithreddyvennam/'>Rohith Reddy Vennam</a>
   photo: rohith.jpg
   info: PhD Student, started 2021
-  email: rvennam@ucsd.edu
+  email: rvennam [at] ucsd.edu
   number_educ: 1
   education1:  Research interests include millimeter-wave communications, multi-user MIMO, wireless sensing, ML in wireless communications, and building end-to-end systems.
-  education2: 
+  education2: "Highlights: "
+  education3:
+  education4:
+
+- name: <a href='https://www.linkedin.com/in/kevin-mills-12902b1b5/'>Kevin Mills</a>
+  photo: kevin.png
+  info: PhD Student, started 2021
+  email: kmmills [at] ucsd.edu
+  number_educ: 1
+  education1:  Developing a wideband sensor capable of high dynamic range for the potential purpose of enforcing  spectrum regulations. His current research involves how to effectively leverage 5G wireless technology for defense applications.
+  education2: "Highlights: "
+  education3:
+  education4:
+
+- name: <a href='https://www.linkedin.com/in/nagarjun-bhat/'>Nagarjun Bhat</a>
+  photo: nagarjun.jpg
+  info: PhD Student, started 2022
+  email: nbhat [at] ucsd.edu
+  number_educ: 1
+  education1: Research interests include mmwave backscatter communication, wireless sensing, and communication, radar and navigation for autonomous platforms.
+  education2: "Highlights: "
+  education3:
+  education4:
+
+- name: <a href='https://www.linkedin.com/in/ushasighosh97/'>Ushasi Ghosh</a>
+  photo: ushasi.JPG
+  info: PhD Student, started 2022
+  email: ughosh [at] ucsd.edu
+  number_educ: 1
+  education1:  Design and development of end-to-end systems for the next generation cellular networks to support low latency applications like AR/ VR.
+  education2: "Highlights: "
+  education3:
+  education4:
+
+
+
+- name: <a href='https://www.linkedin.com/in/raini-wu-590094191/'>Raini Wu</a>
+  photo: raini.jpg
+  info: PhD Student, started 2022 
+  email: rainiwu [at] ucsd.edu
+  number_educ: 1
+  education1:  Raini is working on scalable distributed systems, particularly in heterogeneous computing environments, for applications such as spectrum sensing, wireless communications, and virtual reality.
+  education2: "Highlights: "
   education3:
   education4:
