--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,10 @@
 
 
+
+- date: Nov 2022
+  headline: "Dinesh announced his tenureship: I received a formal letter that I am tenured with acceleration. In large part, it is less of my success, but it is our shared success. I am delighted to have an opportunity to work with everyone here!"
+
+
 - date: Sep 2022
   headline: Ish Jain and Raghav Subbaraman won <a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2022-north-america">Qualcomm Innovation Fellowship 2022</a>.
 
