--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,9 +1,17 @@
+- date: Jan 2023
+  headline: "Mobicom'23 accepted GreenMO and IMWUT'23 accepted WiFoceSticker. Congrats Agrim and team!"
 
+- date: Jan 2023
+  headline: "Hotmobile'23 accepted paper on MIRAGE - privacy fo user location. Congrats Roshan, Aditya, and Wei!"
 
+- date: Dec 2022
+  headline: Infocom'23 paper on <a href="https://wcsng.ucsd.edu/dpa/">Delay Phased array (DPA)</a> - an innovative antenna array design for flexible, sustainable, and frequency-dependent multi-beam operations. Congrats Ish, Rohith, and Raghav!
+
+- date: Dec 2022
+  headline: "IEEE SnP'23 paper on mmSpoof- spoofing automotive radars using mmWave reflect array. Congrats Rohith, Ish, and Kshitiz!"
 
 - date: Nov 2022
   headline: "Dinesh announced his tenureship: I received a formal letter that I am tenured with acceleration. In large part, it is less of my success, but it is our shared success. I am delighted to have an opportunity to work with everyone here!"
-
 
 - date: Sep 2022
   headline: Ish Jain and Raghav Subbaraman won <a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2022-north-america">Qualcomm Innovation Fellowship 2022</a>.
