--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -28,7 +28,7 @@
   photo: wei.jpg
   info: Post Doc, started Sep 2022
   email: 
-  number_educ: 1
+  number_educ: 2
   education1:  Wei’s research focuses on human-centered wireless sensing for health, safety and privacy.
   education2: "Highlights: Hotmobile'23"
   education3:
@@ -36,10 +36,20 @@
 
 - name: <a href='https://www-int.ist.osaka-u.ac.jp/user/saru/en/'>Shunsuke Saruwatari (saru)</a>
   photo: saru.jpg
-  info: Visiting Scholar, started Jul 2022
+  info: Visiting Scholar from Osaka University, Japan, started Jul 2022
   email: ssaruwatari [at] ucsd.edu
   number_educ: 1
   education1:  Saru's research interests include wireless localization, wireless sensing, wireless power transfer, wireless networks, IoT systems, and system software. He is particularly interested in making everything programmable through radio spectrum.
+  education2: "Highlights: "
+  education3:
+  education4:
+
+- name: <a https://www.linkedin.com/in/frederik-zumegen-428ba11b5/?originalSubdomain=de'>Frederik Zumegen</a>
+  photo: frederik.jpg
+  info: Visiting Scholar from TU Munich, Germany, started Sep 2022
+  email: ssaruwatari [at] ucsd.edu
+  number_educ: 1
+  education1:  Frederik's research focuses on the Next Generation cellular networks control. He works with open-source cellular stacks such as srsRAN and deploys them with Open-RAN standards.
   education2: "Highlights: "
   education3:
   education4:
