--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -25,7 +25,7 @@
     display:  "[IEEE SnP 2023]"
   highlight: 1
   tag1: communication
-  tag2: 
+  tag2: privacy
   news1: 
   website: 
     url: https://wcsng.ucsd.edu/mmspoof/
