--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -4,6 +4,8 @@
   info: Chi was a postdoc whose research interests include energy-efficient wireless networking, precision & robust localization, wireless power delivery, as well as mobile & ubiquitous sensing.
   email: c4zhang [at] eng.ucsd.edu
   number_educ: 2
+  research1: wireless-sensing
+  research2:
   education1: Ph.D. at University of Wisconsin, Madison
   education2: "Highlights: Mobisys'19, Mobicom'20, ISSCC'20"
   education3:
@@ -13,6 +15,8 @@
   photo: rock.jpg
   duration: Class of 2019 (Now Firmware Engineer at Broadcom, SD)
   info: PhD co-advised with Prof. Ramesh Rao. Hans established a large WiFi network on our campus building using Quantenna AP, with a goal to improve WiFi handover. 
+  research1:
+  research2:
   project: 
   number_educ: 0
   education1: 
